Install logs_query.html when running stress tests

--- a/logsmanagement/stress_test/logs_query.html
+++ b/logsmanagement/stress_test/logs_query.html
@@ -170,7 +170,7 @@ function submit_query() {
     );
   }
   
-
+  console.log("Query:\n" + xmlhttp_req);
   xmlhttp.open("GET", xmlhttp_req, true);
   xmlhttp.send(null);
 }
