Add number of logs per item in DB and in queries response

--- a/logsmanagement/stress_test/logs_query.html
+++ b/logsmanagement/stress_test/logs_query.html
@@ -106,7 +106,7 @@ function submit_query() {
             "<b>Requested until:</b> " + logs_management_meta.requested_until + "<br>" +
             "<b>Actual from:</b> " + logs_management_meta.actual_from + "<br>" +
             "<b>Actual until:</b> " + logs_management_meta.actual_until + "<br>" +
-            "<b>Keyword matches on this page:</b> " + logs_management_meta.keyword_matches + "<br>" +
+            "<b>Number of distrinct log records on this page:</b> " + logs_management_meta.num_lines + "<br>" +
             "<b>User time:</b> " + logs_management_meta.user_time + "<br>" +
             "<b>System time:</b> " + logs_management_meta.system_time + "<br>" +
             "<b>Error code:</b> " + logs_management_meta.error_code + "<br>" +
