--- a/web/gui/v2/local-agent.html
+++ b/web/gui/v2/local-agent.html
@@ -120,8 +120,11 @@
       fetch(window.envSettings.agentApiUrl + "/api/v1/registry?action=hello", { cache: "no-cache", credentials: "include" })
         .then(function(response) { return response.json() })
         .then(function(data) {
-          window.envSettings.apiUrl = data.cloud_base_url
-          window.envSettings.cloudUrl = data.cloud_base_url
+          var to = data.cloud_base_url.lastIndexOf('/');
+          to = to == -1 ? data.cloud_base_url.length : to + 1;
+          var cloudUrl = data.cloud_base_url.substring(0, to);
+          window.envSettings.apiUrl = cloudUrl
+          window.envSettings.cloudUrl = cloudUrl
 
           window.localNetdataRegistry = {
             anonymousStatistics: data.anonymous_statistics,
